[package]
name = "document-api"
version = "0.8.0"
authors = [
    "Mark Gall <mark.gall@aisec.fraunhofer.de>",
    "Georg Bramm <georg.bramm@aisec.fraunhofer.de>",
]
edition = "2018"

[dependencies]
biscuit = { git = "https://github.com/lawliet89/biscuit", branch = "master" }
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.4"
fern = "0.5"
hex = "0.4.3"
log = "0.4.14"
mongodb ="2.0.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "1.8.1"
tokio-test = "0.4.2"
core-lib = {path = "../core-lib" }
